# ASMR-Autonomous-Simplified-Macro-Runtime

./: .env.example  .gitignore  LICENSE  One_Key_Start.bat  QUICKSTART.md  README.md  docker-compose.yml
backend/: config.yaml.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  base_tool.py  config.py  database.py  main.py  models.py
backend/app/api/: __init__.py  agent.py  bili.py  click.py  images.py  jm.py  todos.py
backend/app/plugins/: __init__.py
backend/app/services/: bili_service.py  image_service.py  jm_service.py
backend/config/: jm_option.example.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/assets/: main.css
frontend/src/components/: LogoAnimation.vue  Sidebar.vue  Toast.vue
frontend/src/composables/: useSettings.js  useTheme.js
frontend/src/router/: index.js
frontend/src/utils/: clickTracker.js
frontend/src/views/: BiliView.vue  HomeView.vue  ImageView.vue  JmView.vue  MiaoView.vue  NotFoundView.vue  SettingView.vue  TodoView.vue
scripts/: migrate_db.py
