[project]
name = "bot_to_html_backend"
version = "0.1.0"
description = "Bot_to_html 后端服务"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pdm.scripts]
start = "uvicorn app.main:app --reload"
migrate = "alembic upgrade head"
generate-migration = "alembic revision --autogenerate -m"

[tool.pdm.dev-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
]
